--- a/style.css
+++ b/style.css
@@ -1,53 +1,63 @@
-html {
+body {
+  display: flex;
+  flex-direction: column-reverse;
+  justify-content: center;
+  align-items: center;
   font-size: 10px;
-  /* background: url('./background.jpg') bottom center;
-  background-size: cover; */
-  background-color: #000000;
-  background-image: linear-gradient(315deg, #000000 0%, #ffffff 66%, #000000);
-  }
-
-body,html {
+  background-image: linear-gradient(147deg, #EBEBEB 0%, #DBDBDB 74%);
+  width: 100vw;
+  height: 100vh;
   margin: 0;
   padding: 0;
   font-family: sans-serif;
 }
 
+h1 {
+  font-family: 'Cinzel', serif;
+  margin-top: 5em;
+  border-bottom: 0.2em double #000;
+}
+
 .keys {
-  display: flex;
-  flex: 1;
-  min-height: 100vh;
-  align-items: center;
-  justify-content: center;
+  box-shadow: .2em 0.1em 1.5em rgba(0, 0, 0, 0.1);
+  border-radius: 1em;
+  margin-top: 5em;
+  padding: 5em;
+  left: auto;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr );
 }
 
 .key {
-  border: .15rem solid #666666;
-  border-radius: .5rem;
-  margin: 1rem;
-  font-size: 1.5rem;
-  padding: 1rem .5rem;
+  border: .15em solid #666666;
+  border-radius: .5em;
+  margin: 1em;
+  font-size: 1.5em;
+  padding: 1em .5em;
   transition: all .07s ease;
-  width: 10rem;
+  width: 10em;
   text-align: center;
   color: white;
-  background: rgba(0,0,0,0.4);
-  text-shadow: 0 0 .5rem black;
+  background: rgba(0,0,0,0.3);
+  text-shadow: 0 0 .5em rgba(0, 0, 0, 0.5);
 }
 
 .playing {
-  transform: scale(1.2);
-  border-color: #7c0000;
-  box-shadow: 0 0 1rem #DADADA;
+  transform: scale(1.1);
+  border-color: rgb(77, 181, 189);
+  box-shadow: 0.2em 0.4em 1em rgba(77, 181, 189, 0.7);
 }
 
 kbd {
   display: block;
-  font-size: 3.2rem;
+  font-size: 2.6em;
 }
 
 .sound {
-  font-size: 1.2rem;
+  font-size: 0.9em;
   text-transform: uppercase;
-  letter-spacing: .1rem;
-  color: #DADADA;
+  letter-spacing: .1em;
+  color: rgba(255, 255, 255, 0.8);
 }
+
