--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
   background-image: linear-gradient(147deg, #EBEBEB 0%, #DBDBDB 74%);
   width: 100vw;
   height: 100vh;
+  gap: 20px;
   margin: 0;
   padding: 0;
   font-family: sans-serif;
@@ -14,11 +15,11 @@ body {
 
 h1 {
   font-family: 'Cinzel', serif;
-  margin-top: 5em;
   border-bottom: 0.2em double #000;
 }
 
 .keys {
+  max-height: 60vh;
   box-shadow: .2em 0.1em 1.5em rgba(0, 0, 0, 0.1);
   border-radius: 1em;
   margin-top: 5em;
@@ -41,6 +42,12 @@ h1 {
   color: white;
   background: rgba(0,0,0,0.3);
   text-shadow: 0 0 .5em rgba(0, 0, 0, 0.5);
+}
+
+.key:hover {
+  transform: scale(1.1);
+  border-color: rgb(77, 181, 189);
+  box-shadow: 0.2em 0.4em 1em rgba(77, 181, 189, 0.7);
 }
 
 .playing {
